# blog

./: .cursorignore  .gitignore  CLAUDE.md  GEMINI.md  README.md  mdx-components.tsx  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
app/: fonts.ts  globals.css  intro.tsx  layout.tsx  page.tsx
backend/: CLAUDE.md  GEMINI.md  helpers.py  main.py  pyproject.toml  requirements.txt
backend/QA/: GEMINI.md  blog.en.json  blog.tw.json  metadata.json  person.en.json  person.tw.json  tags.json  vtuber.en.json  vtuber.tw.json
backend/services/: chatbot_service.py  loaders.py  prompts.py  retrievers.py
components/: AnimatedBackground.tsx  BackToTop.tsx  BadgeLink.tsx  BaseballScoreboardBanner.tsx  BlackHole.tsx  CodeBlock.tsx  DarkModeToggle.tsx  H1.tsx  HR.tsx  LocaleSwitcher.tsx  LocaleSwitcherSelect.tsx  NavBar.tsx  ProgressBar.tsx  ProjectCard.tsx  Scene3D.tsx  ScrollReveal.tsx  Section2.tsx  ShaderViewer.tsx  Sidebar.tsx  SocialLinks.tsx  Squares.tsx  TechBadge.tsx  TextRotation.tsx  YouTubePlayer.tsx  inlineCode.tsx
i18n/: request.ts  routing.ts
lib/: shaders.ts  tags.ts  types.ts
markdown/: Built-inFunctions.md  Django.md  Django.mdx  Docker.md  DockerFile.md  DockerZeroToPerfect.md  Docker底層.md  Github-io個人網站架設.md  MacTerminal.md  PEP765.md  Setuptools-如何打包程式.md  ShellScript.md  Strings.md  Strings.mdx  ThreeJs.md  Tlog3.md  Vim.md  args.mdx  hacktoberfest.md  hexo-2.md  loop.md  military.md  tlog.md  tlog2.md  vtuber.md  whisper.md  whisper.mdx  ytdlp.md  zsh_autosuggetion.md  成長環境的重要.md  胃痛番.md  胃痛番2.md
(+161 files in other folders)
